[BugFree 3510] 3220_V10.20.01.15_Schedule:No gap between the scheduled meeting list loop icon and the theme
Cause: None
Solution: None
Fixed Version: 20200117 10:30
Branch: GVC3220
Reviewed-on: https://192.168.120.246/176623
Tested-by: leiliu <leiliu@grandstream.cn>

--- a/webgui/gvc3200_new/src/pages/Backend/Call/Schedule/Schedule.less
+++ b/webgui/gvc3200_new/src/pages/Backend/Call/Schedule/Schedule.less
@@ -14,12 +14,12 @@
   .preconflist {
     width: 100%;
     .confbox {
-      padding: 15px;
+      padding: 20px 24px;
       font-size: 14px;
       position: relative;
-      border-top: 1px solid #dfe1e2;
+      border-top: 1px solid #eceff1;
       &:last-child {
-        border-bottom: 1px solid #dfe1e2;
+        border-bottom: 1px solid #eceff1;
       }
       button{
         opacity: 0;
@@ -27,7 +27,7 @@
       .icon-repeat {
         position: absolute;
         top: 10px;
-        left: -15px;
+        left: -21px;
       }
       &:hover{
         background: #f0f4ff;
@@ -37,8 +37,8 @@
         }
       }
       .ant-row {
-        line-height: 35px;
-        height: 35px;
+        line-height: 28px;
+        height: 28px;
         &:first-child {
           font-weight: bold;
           color: #10131a;
